# stechec

./: .gitignore  .hgignore  .indent.pro  AUTHORS  HOWTO.fr  INSTALL  Makefile.am  README  README.stechec  bootstrap  config.ini  config_2010.ini  configure.ac  debug_config.ini  logs_de_geek  regen_all.sh  stechec.spec
bb5/ai/: Makefile.am  ai.cc  ai.hh  tbt_ai-module.dox
bb5/arbiter/: Makefile.am  SActionHandler.cc  SActionHandler.hh  SBall.cc  SBall.hh  SPlayer.cc  SPlayer.hh  SPlayerMsg.cc  SPlayerMsg.hh  SPlayerMsg.hxx  SRules.cc  SRules.hh  SRules.hxx  STeam.cc  STeam.hh  STeamMsg.cc  STeamMsg.hh  STeamMsg.hxx  SWeather.cc  SWeather.hh  tbt_server_rules-module.dox
bb5/client/: Api.hh  Api.hxx  CBall.cc  CBall.hh  CField.cc  CField.hh  CPlayer.cc  CPlayer.hh  CPlayerMsg.cc  CPlayerMsg.hh  CRules.cc  CRules.hh  CRules.hxx  CTeam.cc  CTeam.hh  CTeamMsg.cc  CTeamMsg.hh  Event.cc  Event.hh  Makefile.am  interface.cc  tbt_client_api-module.dox
bb5/common/: Ball.hh  Ball.hxx  Constants.cc  Constants.hh  Dice.cc  Dice.hh  Field.cc  Field.hh  Field.hxx  Makefile.am  Module.cc  Player.hh  Player.hxx  Rules.cc  Rules.hh  Team.hh  Team.hxx  Weather.cc  Weather.hh  tbt_rules-module.dox
bb5/console/: Makefile.am  console_loader.cc  input.cc  input.hh  interface.cc  interface.hh  tbt_cli-module.dox
bb5/data/: Makefile.am  bb5.yml  blank_and_label.im.sh  default_config.xml.in  draw_ball.im.sh  draw_playground.im.sh  draw_tokens.im.sh  img2emblem.sh  img2player.sh  resize_emblem.im.sh  resize_player.im.sh
bb5/rules_test/: Makefile.am  basic_1.cmd  basic_2.cmd  blitz1_1.cmd  blitz1_1.ref  blitz1_2.cmd  blitz1_2.ref  block2_1.cmd  block2_1.ref  block2_2.cmd  block2_2.ref  block_1.cmd  block_1.diff  block_1.ref  block_2.cmd  block_2.diff  block_2.ref  block_bothdown_1.cmd  block_bothdown_1.ref  block_bothdown_2.cmd  block_bothdown_2.ref  block_stumble_1.cmd  block_stumble_2.cmd  blockfollow1_1.cmd  blockfollow1_1.ref  blockfollow1_2.cmd  blockfollow2_1.cmd  blockfollow2_1.ref  blockfollow2_2.cmd  crash_1.cmd  crash_1.ref  crash_2.cmd  crowd1_1.cmd  crowd1_2.cmd  crowd1_2.ref  crowd2_1.cmd  crowd2_2.cmd  crowd2_2.ref  formation.xml  kickoff_basic_1.cmd  (+41 more)
bb5/teamroster2/: BBowlWidget.cc  BBowlWidget.hh  Helper-classes.hh  InvalidParameterException.hh  Makefile.am  My_DropDown.cc  Player.cc  Player.hh  PlayerLineWidget.cc  PlayerLineWidget.hh  Position.cc  Position.hh  README  Race.cc  Race.hh  RaceHandler.cc  RaceHandler.hh  RaceParser.cc  RaceParser.hh  TODO  Team.cc  Team.hh  TeamHandler.cc  TeamHandler.hh  TeamParser.cc  TeamWriter.cc  TeamWriter.hh  Teamroster.cc  TeamrosterApp.cc  TeamrosterApp.hh  configure.in  teamroster.pot
bb5/visu2d/: ActionDlg.cc  ActionDlg.hh  ActionPopup.cc  ActionPopup.hh  Button.cc  Button.hh  Colors.hh  DialogBox.cc  DialogBox.hh  DlgBox.cc  DlgBox.hh  Entry.cc  Entry.hh  Field.cc  Field.hh  Focus.cc  Focus.hh  Game.cc  Game.hh  GameButton.cc  GameButton.hh  Global.cc  Global.hh  GuiError.cc  GuiError.hh  Input.cc  Input.hh  InputEvent.cc  InputEvent.hh  InputTextSurface.cc  InputTextSurface.hh  Label.cc  Label.hh  LabelEntry.cc  LabelEntry.hh  Makefile.am  Map.cc  Map.hh  Menu.cc  Menu.hh  (+26 more)
build-aux/: Makefile.am  build_prologin.sh  check-rules.mk  mysql.m4  paragui.m4  pthreads.m4  python.m4  qt.m4  readline.m4  sdl.m4  stechec-deps.m4  subject-sphinx.mk  subject.mk  subject.sty  texi2dvi  xerces.m4
build-aux/scripts/: README  build-deb.sh  build-rpm.sh  make-package.sh  make-root.sh
doc/: Doxyfile  Makefile.am  client_server_com_src.odg  client_server_com_src.odt  doc.doxy.in  doxygen_main.hh  expand_packet_macro.sed  propal.tex  stechec.tex
doc/slide/: Makefile  latexmk.pl  presentation.tex
doc/styles/: tbt.sty
prologin/common/: CRules.cc  CRules.hh  Contest.hh  Makefile.am  Rules.cc  Rules.hh  SRules.cc  SRules.hh  StechecApi.cc  StechecApi.hh  StechecClient.hh  StechecClientDiffer.hh  StechecClientEntry.hh  StechecEntry.hh  StechecEvent.cc  StechecEvent.hh  StechecGameData.hh  StechecServer.cc  StechecServer.hh  StechecServerEntry.hh  StechecServerResolver.cc  StechecServerResolver.hh
prologin/gui_qt/: GLObject.hh  GLWorld.cc  GLWorld.hh  Gui.cc  Gui.hh  MainWindow.cc  MainWindow.hh  Makefile.am  MiniMap.cc  MiniMap.hh  Object2D.cc  Object2D.hh  Pixmap.cc  Pixmap.hh  QTObject.cc  QTObject.hh  QTPixmap.cc  QTPixmap.hh  QTWorld.cc  QTWorld.hh  World.cc  World.hh
prologin/main_server/: Computer.cc  Computer.hh  Makefile.am  Match.cc  Match.hh  argument.cc  argument.hh  conf.cc  conf.hh  connection_meta.cc  connection_meta.hh  end_delete_free.cc  end_delete_free.hh  gest_match.cc  gest_match.hh  init_close_sql.cc  init_close_sql.hh  main.cc  make_computer.cc  make_computer.hh  make_int_tab.cc  make_int_tab.hh  simple_func.cc  simple_func.hh
prologin/meta_server/: Makefile.am  argument.cc  command.cc  command.hh  command_client.cc  command_compil.cc  command_server.cc  command_triche.cc  conf.cc  conf.hh  conf.yml  connection.cc  connection.hh  db.cc  db.hh  explode.cc  explode.hh  fork.cc  fork.hh  main_meta.cc  simple_func.cc  simple_func.hh  verboseur.cc  verboseur.hh
prologin/tkrun/: Makefile.am  champion.rb  interface.rb  map.rb  server.rb  tkrun.rb  xmlconf.rb
prologin/web_meta/: Makefile.am  check_cheating.sh  compile_champion.sh  log_limit.c  main_server  meta_cx.sh  meta_server  run_client.sh  run_server.sh  stechec.yml.in
stechec/base_rules/: BaseApi.hh  BaseCRules.cc  BaseCRules.hh  BaseCRules.hxx  BaseRules.cc  BaseRules.hh  BaseSRules.cc  BaseSRules.hh  EventProcess.cc  EventProcess.hh  Makefile.am  NutsBarrier.cc  NutsBarrier.hh  PacketHandler.hh  PacketSender.hh
stechec/client/: ChampionLoader.cc  ChampionLoader.hh  ClientApp.cc  ClientApp.hh  ClientCx.cc  ClientCx.hh  Makefile.am  RulesLoader.cc  RulesLoader.hh  Stechec.cc  Stechec.hh  champion_loader.cc  champion_loader.hh  client-module.dox  client_cx.cc  client_cx.hh  main.cc  rules_loader.cc  rules_loader.hh  start_arbiter.cc  start_arbiter.hh
stechec/scripts/: Makefile.am  compile_champion.sh  conf.rb.in  generator.rb  rules_test.rb  run.sh  xmlparser.awk
(+1504 files in other folders)
