# -*-Makefile-*-

MAINTAINERCLEANFILES =                          \
	Makefile.in                             \
	$(STANDARD_TOOLS)

STANDARD_TOOLS =                                \
	install-sh                              \
	missing                                 \
	mkinstalldirs                           \
	depcomp

EXTRA_DIST	=				\
	texi2dvi				\
	subject.sty
